tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-generic-parameter.wyst
module demo
fn identity<widen>(value: u64) -> u64 { return value }
